<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GuestLiveChatFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_0_5dp"
            android:background="@color/gray" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvIsApplicationInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginTop="@dimen/_28dp"
            android:layout_marginBottom="@dimen/_12dp"
            android:text="@string/guest_info"
            android:textAllCaps="true"
            android:textColor="@color/gray"
            android:textSize="@dimen/_13sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_0_5dp"
            android:background="@color/gray" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tvIsName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_54dp"
            android:background="@color/white">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvNameTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16dp"
                android:text="@string/is_name_title"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNameBody"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_150dp"
                android:layout_marginEnd="@dimen/_16dp"
                android:background="@color/white_transparent"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ ضصثقفلإغإعهخحجدشسيبللأاأتنمكطئءؤرلالآىةوزظذ"
                android:gravity="center_vertical"
                android:hint="@string/is_optional"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLength="50"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/_16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_0_5dp"
            android:layout_marginStart="@dimen/_16dp"
            android:background="@color/gray" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tvIsMobileNumber"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_54dp"
            android:background="@color/white">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvMobileNumberTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16dp"
                android:text="@string/guest_phone_number"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_150dp"
                android:layout_marginEnd="@dimen/_16dp"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/is_optional"
                android:inputType="number"
                android:lines="1"
                android:maxLength="10"
                android:maxLines="1"
                android:minLines="1"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/_16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_0_5dp"
            android:background="@color/gray" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_54dp"
            android:background="@color/white">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvEmailTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16dp"
                android:text="@string/guest_email"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etMail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_150dp"
                android:layout_marginEnd="@dimen/_16dp"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/is_required"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:maxLength="10"
                android:maxLines="1"
                android:minLines="1"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/_16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_0_5dp"
            android:background="@color/gray" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_0_5dp"
        android:background="@color/gray"
        app:layout_constraintBottom_toTopOf="@+id/btnSubmit_CL" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/btnSubmit_CL"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_82dp"
        android:background="@color/white_transparent_low"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50dp"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginEnd="@dimen/_16dp"
            android:background="@drawable/bg_btn"
            android:text="@string/continues"
            android:textColor="@color/white" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>