<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/baseContent"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".support.chat.LeaveCommentBottomSheetFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/_10dp"
            android:paddingBottom="@dimen/_10dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/btnClose"
                android:layout_width="@dimen/_24dp"
                android:layout_height="@dimen/_24dp"
                android:layout_marginEnd="@dimen/_11dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_close" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/live_chat"
                android:textColor="@color/black"
                android:textSize="@dimen/_17sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_0_5dp"
            android:background="@color/gray" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white_transparent_low">

            <FrameLayout
                android:id="@+id/fl_bg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_40dp"
                android:layout_marginTop="@dimen/_30dp"
                android:layout_marginEnd="@dimen/_40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_bg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/ic_like_dislike_bg" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_like_dilike"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_30dp"
                    android:layout_marginBottom="@dimen/_30dp"
                    app:srcCompat="@drawable/ic_like_feedback" />
            </FrameLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_40dp"
                android:layout_marginEnd="@dimen/_40dp"
                android:layout_marginBottom="@dimen/_40dp"
                android:gravity="center"
                android:text="@string/thank_you_for_recommeding_us"
                android:textColor="@color/black"
                android:textSize="@dimen/_17sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fl_bg" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_0_5dp"
            android:background="@color/gray" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginTop="@dimen/_16dp"
            android:text="@string/your_comments"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginTop="@dimen/_15dp"
            android:background="@null"
            android:hint="@string/is_optional"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_0_5dp"
        android:background="@color/gray"
        app:layout_constraintBottom_toTopOf="@+id/btnSubmit_CL" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/btnSubmit_CL"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_82dp"
        android:background="@color/white_transparent_low"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50dp"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginEnd="@dimen/_16dp"
            android:background="@drawable/bg_btn"
            android:text="@string/send_feedback"
            android:textColor="@color/white" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>